Fixed test cases